# gbdes

./: CMakeLists.txt  Makefile  SConstruct  gbdes_pysetup.sh  setup.py  test_pybind.py  wcsfit_test.py
analysis/: photoplots.py
astrometry/: CMakeLists.txt
astrometry/include/: Astrometry.h  PiecewiseMap.h  PixelMap.h  PixelMapCollection.h  PolyMap.h  TemplateMap.h  Wcs.h  YAMLCollector.h
astrometry/src/: Astrometry.cpp  PiecewiseMap.cpp  PixelMap.cpp  PixelMapCollection.cpp  PolyMap.cpp  SubMap.cpp  Wcs.cpp  YAMLCollector.cpp
astrometry/tests/: testCollector.cpp  testPMWrite.cpp  testSphericalYAML.cpp
gbfits/: FITS.cpp  FITS.h  FTable.cpp  FTable.h  FTable2.h  FTableExpression.cpp  FitsTable.cpp  FitsTable.h  Hdu.cpp  Header.cpp  Header.h  HeaderFromStream.cpp  HeaderFromStream.h  Image.cpp  Image.h  Image2.h
gbutil/include/: Array.h  Array3d.h  Bounds.h  Brent.h  Expressions.h  Function1d.h  Lookup1d.h  Marquardt.h  NameIndex.h  Poisson.h  Poly2d.h  Pset.h  Shear.h  Simpson.h  Solve.h  Table.h  Utils.h  fft.h
gbutil/src/: BinomFact.cpp  Interpolant.cpp  Lookup1d.cpp  Poisson.cpp  Poly2d.cpp  Shear.cpp  Table.cpp  (+2 more)
include/: Accum.h  DECamInfo.h  FitSubroutines.h  FoF.h  Instrument.h  MapDegeneracies.h  Match.h  PhotoMatch.h  TPVMap.h  WCSFitRoutine.h  WCSFit_fit.h  WcsSubs.h
pydir/: CMakeLists.txt  wcsfit.cpp
src/: ApplyPhoto.cpp  ApplyWCS.cpp  DrawAstro.cpp  ListClipped.cpp  MagColor.cpp  PhotoFit.cpp  Tpv2Pixmap.cpp  WCSFit_exec.cpp  WCSFit_orig.cpp  WCSFoF.cpp
test_data/: polyExposure.astro  refactor.fof  testParams_refactor.txt
ups/: gbdes.table
(+27 files in other folders)
